@@ -1037,7 +1037,7 @@ $wgCacheEpoch = '20030516000000';
  * to ensure that client-side caches don't keep obsolete copies of global
  * styles.
  */
-$wgStyleVersion = '26';
+$wgStyleVersion = '27';
 
 # Server-side caching:
 
